# diffstack

./: .gitignore  CITATION.cff  LICENSE.txt  README.md  pyproject.toml  requirements.txt  setup.cfg  setup.py
config/: diffstack_default.json
config/templates/: AFPredStack.json  CTTPredStack.json  SceneFormerPredStack.json  SceneFormerPredStack_nuplan.json
diffstack/: argument_parser.py  closed_loop_eval.py  train.py
diffstack/configs/: __init__.py  algo_config.py  base.py  eval_config.py  registry.py  trajdata_config.py
diffstack/data/: agent_batch_extras.py  cached_nusc_as_trajdata.py  scene_batch_extras.py  trajdata_datamodules.py  trajdata_interface.py  trajdata_lanes.py
diffstack/dynamics/: __init__.py  base.py  bicycle.py  double_integrator.py  single_integrator.py  unicycle.py
diffstack/models/: CTT.py  RPE_simple.py  Transformer.py  TypeTransformer.py  agentformer.py  base_models.py  cnn_roi_encoder.py  layers.py  learned_metrics.py  unet.py  vaes.py
diffstack/modules/: diffstack.py  dynamics_functions.py  module.py
diffstack/scripts/: generate_config_templates.py  train_pl.py
diffstack/stacks/: base.py  pred_stack.py  stack_factory.py
diffstack/utils/: algo_utils.py  batch_utils.py  bezier_utils.py  cleanup_cached_data.py  cleanup_checkpoint.py  config.py  config_utils.py  diffusion_utils.py  dist_utils.py  env_utils.py  experiment_utils.py  geometry_utils.py  homotopy.py  kalman_filter.py  l5_utils.py  lane_utils.py  log_utils.py  loss_utils.py  math_utils.py  metrics.py  model_registrar.py  model_utils.py  (+13 more)
patches/: trajdata_vectorize.patch
(+38 files in other folders)
