[metadata]
name = diffstack
version = 0.0.2
author = Peter Karkus
author_email = pkarkus@nvidia.com
description = DiffStack: a differentiable prediction, planning, control stack for autonomous driving.
long_description = file: README.md
long_description_content_type = text/markdown
license = NSCL
url = https://github.com/NVlabs/diffstack
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    Programming Language :: Python :: 3.9

[options]
package_dir =
    = ./
packages = find:
python_requires = >=3.9
install_requires =
    numpy>=1.19
    tqdm>=4.62
    matplotlib>=3.5
    dill>=0.3.4
    pandas>=1.4.1
    pyarrow>=7.0.0
    torch>=1.10.2
    zarr>=2.11.0
    kornia>=0.6.4
    pathos>=0.2.9
    seaborn>=0.12
    protobuf>=3.19.4   # for trajdata map api
    orjson>=3.5.1
    ncls>=0.0.57
    wandb
    mpc @ git+https://github.com/locuslab/mpc.pytorch.git
    trajdata[nusc] @ git+https://github.com/NVlabs/trajdata.git@d714b82dadec80c62e6413ae9a0feb42a517be57

[options.packages.find]
where = ./


